# ai-risk-engine

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: dependencies.py
app/api/routers/: compliance.py  events.py  risk.py
app/application/: event_service.py
app/domain/models/: event.py
app/domain/schemas/: event.py
app/domain/validators/: event_validator.py
app/governance/: approval_workflow.py  audit_models.py  exceptions.py  model_registry.py  prompt_registry.py
app/infrastructure/cache/: event_repository_redis.py
app/infrastructure/database/: event_repository_db.py  models.py  repository.py  session.py
app/infrastructure/messaging/: rabbitmq_publisher.py
app/migrations/: 001_initial_schema.sql
app/observability/: cost_tracker.py  failure_classifier.py  langfuse_client.py
app/scalability/: __init__.py  autoscaling_policy.py  bulkhead.py  circuit_breaker.py  distributed_lock.py  health_monitor.py  rate_limiter.py
app/workflows/: dummy_workflow.py
app/workflows/langgraph/: compliance_workflow.py  risk_workflow.py  state_models.py  workflow_state_store.py
docs/: FOLDER_AND_FILE_STRUCTURE.md  PROJECT_STRUCTURE.md  TESTING_AND_LOCAL_SETUP.md
docs/adr/: 001-runtime-governance-enforcement.md
docs/architecture/: ai-system-design-governance-framework.md  governance_enforcement.md  governance_enforcement_sequence.md
tests/chaos/: test_chaos_redis_failures.py  test_chaos_workflow_failures.py
tests/load/: test_load_workflow.py
tests/unit/api/: conftest.py  test_events.py  (+5 more)
(+21 files in other folders)
